# container_iso_check

./: README.md  db.py  main.py  pyproject.toml  replit.nix  transfer.csv
.github/workflows/: codeql.yml  pylint.yml
app/: container_numbers.txt  iso_check.py  soc.py
test/: test_validation.py
