[tool.poetry]
name = "container-iso-check"
version = "0.1.0"
description = "Checks if a container number is valid"
authors = ["Attica-oss <g.mounac@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.6.0"
toml = "^0.10.2"
duckdb = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
